latest updates to proposal document
git-svn-id: svn+ssh://hal.personalrobotics.ri.cmu.edu/old_svn/etc/people/cdellin/docs/fast-manip@33086

--- a/ch01-intro.tex
+++ b/ch01-intro.tex
@@ -91,7 +91,7 @@ To address this problem in depth,
 this thesis focuses on
 efficient kinematic planning approaches
 to coupled manipulation tasks consisting of several (2-5) steps
-as formuated in Chapter~\ref{chap:formulation}.
+as formuated in Chapter~\ref{chap:proposal-framework}.
 We don't consider uncertainty
 or feedback to symbolic planners,
 and we focus primarily on sequential planning and execution.
@@ -354,8 +354,8 @@ We apply our insights to graph- and roadmap-based planners
 as summarized in Table~\ref{table:intro-algorithms}.
 A more detailed summary and outline of the structure of
 manipulation task planning is presented in
-Chapter~\ref{chap:formulation},
-along with a summary of prior work on the problem.
+Chapter~\ref{chap:proposal-framework}.
+%along with a summary of prior work on the problem.
 
 \begin{table}
 {\setlength{\offsetpage}{1in}
@@ -531,7 +531,7 @@ Because this thesis presents an integrated set of algorithms
 for multi-step manipulation task planning,
 we endeavor to place significant emphasis on empirical evaluation
 in order to verify the performance of the proposed approach.
-See Chapter~\ref{chap:experiments} for more details
+See research question \ref{ques:proteus-compare} for more details
 about the metrics, baseline approaches, and test platforms
 that will be used in these comparisons.
 \cdnote{I welcome suggestions from my committee for
